--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -34,6 +34,7 @@
     "next": "14.1.0",
     "next-mdx-remote": "^4.4.1",
     "pg": "^8.8.0",
+    "puppeteer": "^22.9.0",
     "react": "^18",
     "react-dom": "^18",
     "react-remove-scroll": "^2.5.9",
