--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -120,7 +120,7 @@ services:
       - NEXT_PUBLIC_CMS_URL=http://localhost/cms
       - WEB_URL=http://localhost:9000
       - NEXT_PUBLIC_WEB_URL=http://localhost
-      - VIRTUAL_HOST=localhost
+      - VIRTUAL_HOST=localhost,waardelijsten.localhost
       - VIRTUAL_PATH=/
       - VIRTUAL_DEST=/
       - VIRTUAL_PORT=9000
