--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -15,10 +15,12 @@
   },
   "dependencies": {
     "@octokit/rest": "^20.0.2",
+    "@radix-ui/react-collapsible": "^1.1.0",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-navigation-menu": "^1.1.4",
     "@radix-ui/react-portal": "^1.0.4",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tooltip": "^1.1.2",
     "@sindresorhus/slugify": "^2.2.1",
     "@tabler/icons-react": "^2.46.0",
     "@total-typescript/ts-reset": "^0.5.1",
