--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -4,7 +4,7 @@
 # the repo. Unless a later match takes precedence,
 # @onursagir and @sgort will be requested for
 # review when someone opens a pull request.
-* @onursagir @sgort
+* @onursagir @sgort @bkaptijn
 
 # Order is important; the last matching pattern takes the most
 # precedence. When someone opens a pull request that only
