--- a/.github/actions/publish-respec-document-release/action.yml
+++ b/.github/actions/publish-respec-document-release/action.yml
@@ -1,25 +1,28 @@
 name: Publish Respec document to regels.overheid.nl
+description: 'Automates the publication of a ReSpec document to the regels.overheid.nl platform'
 inputs:
   token:
-    description: "The secret publication token"
+    description: 'The secret publication token'
+    required: true
+  owner:
+    description: 'Owner of the GitHub repository'
+    required: true
+  repo:
+    description: 'The name of the GitHub repository'
     required: true
 runs:
-  using: "composite"
+  using: composite
   steps:
-    - name: Extract repository name and send notify request
+    - name: Send notify request
       id: request
-      shell: bash
-      run: |
-        REPO_NAME="${GITHUB_REPOSITORY##*/}"
-        echo "Extracted Repository Name: $REPO_NAME"
-        RESPONSE=$(curl -s -X POST -H "Content-Type: application/json" -d '{"owner":"${{ github.repository_owner }}","repo":"'$REPO_NAME'","secret":"${{ inputs.token }}"}' "https://regels.overheid.nl/api/publications")
-        echo "::set-output name=response::$RESPONSE"
-      env:
-        GITHUB_REPOSITORY: ${{ github.repository }}
-        GITHUB_TOKEN: ${{ inputs.token }}
+      uses: fjogeleit/http-request-action@main
+      with:
+        url: 'https://regels.overheid.nl/api/publications?owner=${{ inputs.owner }}&repo=${{ inputs.repo }}&secret=${{ inputs.token }}'
     - name: Validate notify response
+      env:
+        response: fromJson(steps.request.outputs.response)
       if: fromJSON(steps.request.outputs.response).ok != true
       uses: actions/github-script@v3
       with:
         script: |
-          core.setFailed('Request failed with response: ${{ steps.request.outputs.response }}')
+          core.setFailed(${{ steps.request.outputs.response }})
